--- a/02/P02a.ipynb
+++ b/02/P02a.ipynb
@@ -17,107 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "9248afb0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Usa los sliders para transformar la imagen.\n",
-      "Pulsa ESC para salir.\n"
-     ]
-    }
-   ],
-   "source": [
-    "import cv2 as cv\n",
-    "import numpy as np\n",
-    "\n",
-    "image = cv.imread('images/cats.png')\n",
-    "if image is None:\n",
-    "    raise FileNotFoundError(\"No se encontró la imagen.\")\n",
-    "h, w = image.shape[:2]\n",
-    "\n",
-    "cv.namedWindow(\"Transformaciones\")\n",
-    "\n",
-    "def nothing(x):\n",
-    "    pass\n",
-    "\n",
-    "\n",
-    "cv.createTrackbar(\"Tx\", \"Transformaciones\", w//2, w, nothing)\n",
-    "cv.createTrackbar(\"Ty\", \"Transformaciones\", h//2, h, nothing)\n",
-    "cv.createTrackbar(\"Angulo\", \"Transformaciones\", 0, 360, nothing)\n",
-    "cv.createTrackbar(\"Cx\", \"Transformaciones\", w//2, w, nothing)\n",
-    "cv.createTrackbar(\"Cy\", \"Transformaciones\", h//2, h, nothing)\n",
-    "cv.createTrackbar(\"EscalaX\", \"Transformaciones\", 100, 200, nothing)  \n",
-    "cv.createTrackbar(\"EscalaY\", \"Transformaciones\", 100, 200, nothing)\n",
-    "cv.createTrackbar(\"Uniforme\", \"Transformaciones\", 0, 1, nothing)\n",
-    "\n",
-    "print(\"Usa los sliders para transformar la imagen.\")\n",
-    "print(\"Pulsa ESC para salir.\")\n",
-    "\n",
-    "while True:\n",
-    "    tx = cv.getTrackbarPos(\"Tx\", \"Transformaciones\") - w//2\n",
-    "    ty = cv.getTrackbarPos(\"Ty\", \"Transformaciones\") - h//2\n",
-    "    angle = cv.getTrackbarPos(\"Angulo\", \"Transformaciones\")\n",
-    "    cx = cv.getTrackbarPos(\"Cx\", \"Transformaciones\")\n",
-    "    cy = cv.getTrackbarPos(\"Cy\", \"Transformaciones\")\n",
-    "    sx = cv.getTrackbarPos(\"EscalaX\", \"Transformaciones\") / 100.0\n",
-    "    sy = cv.getTrackbarPos(\"EscalaY\", \"Transformaciones\") / 100.0\n",
-    "    uniforme = cv.getTrackbarPos(\"Uniforme\", \"Transformaciones\")\n",
-    "\n",
-    "    # Traslación\n",
-    "    T = np.float32([[1, 0, tx],\n",
-    "                    [0, 1, ty]])\n",
-    "    img_T = cv.warpAffine(image, T, (w, h))\n",
-    "\n",
-    "    # Rotación\n",
-    "    M_translate1 = np.float32([[1, 0, -cx],\n",
-    "                               [0, 1, -cy]])\n",
-    "    M_rotate = cv.getRotationMatrix2D((0, 0), angle, 1.0)\n",
-    "    M_translate2 = np.float32([[1, 0, cx],\n",
-    "                               [0, 1, cy]])\n",
-    "\n",
-    "    M1 = np.vstack([M_translate1, [0, 0, 1]])\n",
-    "    M2 = np.vstack([M_rotate, [0, 0, 1]])\n",
-    "    M3 = np.vstack([M_translate2, [0, 0, 1]])\n",
-    "    M_rot = M3 @ M2 @ M1\n",
-    "    img_R = cv.warpAffine(img_T, M_rot[:2], (w, h))\n",
-    "\n",
-    "    # Escalado\n",
-    "    if uniforme:\n",
-    "        s = sx\n",
-    "        S = np.float32([[s, 0, 0],\n",
-    "                        [0, s, 0]])\n",
-    "    else:\n",
-    "        S = np.float32([[sx, 0, 0],\n",
-    "                        [0, sy, 0]])\n",
-    "\n",
-    "    img_final = cv.warpAffine(img_R, S, (w, h))\n",
-    "\n",
-    "    img_display = img_final.copy()\n",
-    "    \n",
-    "    cv.circle(img_display, (cx, cy), 5, (0, 0, 255), -1)\n",
-    "    cv.putText(img_display, f\"({cx},{cy})\", (cx + 10, cy - 10),\n",
-    "               cv.FONT_HERSHEY_SIMPLEX, 0.6, (0, 0, 255), 2)\n",
-    "    \n",
-    "    tx_point, ty_point = w//2 + tx, h//2 + ty\n",
-    "    cv.circle(img_display, (tx_point, ty_point), 5, (0, 255, 0), -1)\n",
-    "    cv.putText(img_display, f\"({tx_point},{ty_point})\", (tx_point + 10, ty_point - 10),\n",
-    "               cv.FONT_HERSHEY_SIMPLEX, 0.6, (0, 255, 0), 2)\n",
-    "\n",
-    "    cv.imshow(\"Transformaciones\", img_display)\n",
-    "\n",
-    "    if cv.waitKey(1) & 0xFF == 27:\n",
-    "        break\n",
-    "\n",
-    "cv.destroyAllWindows()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "5c44bdc8",
    "metadata": {},
    "outputs": [
@@ -125,9 +25,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Usa los sliders para transformar la imagen.\n",
-      "Haz CLIC para cambiar el centro de rotación.\n",
-      "Pulsa ESC para salir.\n"
+      "El punto (cx/cy) es el centro de rotación y de escalado. ESC para salir.\n"
      ]
     }
    ],
@@ -135,143 +33,106 @@
     "import cv2 as cv\n",
     "import numpy as np\n",
     "\n",
-    "# Cargar imagen\n",
-    "image = cv.imread('images/cats.png')\n",
-    "if image is None:\n",
-    "    raise FileNotFoundError(\"No se encontró la imagen.\")\n",
-    "h, w = image.shape[:2]\n",
     "\n",
-    "# Variables globales para el centro de rotación\n",
-    "cx = float(w // 2)\n",
-    "cy = float(h // 2)\n",
-    "M_display = np.array([[1.0, 0.0, 0.0],\n",
-    "                      [0.0, 1.0, 0.0]], dtype=np.float32)\n",
+    "img = cv.imread('images/cats.png')\n",
+    "if img is None:\n",
+    "    raise FileNotFoundError(\"No se encontró 'images/cats.png'\")\n",
+    "h, w = img.shape[:2]\n",
     "\n",
-    "# Crear ventana\n",
-    "cv.namedWindow(\"Transformaciones\")\n",
+    "# Lienzo 2x\n",
+    "CW, CH = w*2, h*2\n",
+    "ox, oy = (CW - w)//2, (CH - h)//2\n",
+    "canvas0 = np.zeros((CH, CW, 3), np.uint8)\n",
+    "canvas0[oy:oy+h, ox:ox+w] = img # imagen en el centro del lienzo\n",
     "\n",
-    "def nothing(x):\n",
-    "    pass\n",
+    "cv.namedWindow(\"Transformaciones\", cv.WINDOW_AUTOSIZE)\n",
+    "def nothing(_): pass\n",
     "\n",
-    "# Crear trackbars\n",
-    "cv.createTrackbar(\"Tx\", \"Transformaciones\", w//2, w, nothing)\n",
-    "cv.createTrackbar(\"Ty\", \"Transformaciones\", h//2, h, nothing)\n",
+    "cv.createTrackbar(\"Tx\", \"Transformaciones\", CW//2, CW, nothing)\n",
+    "cv.createTrackbar(\"Ty\", \"Transformaciones\", CH//2, CH, nothing)\n",
     "cv.createTrackbar(\"Angulo\", \"Transformaciones\", 0, 360, nothing)\n",
-    "cv.createTrackbar(\"EscalaX\", \"Transformaciones\", 100, 200, nothing)  \n",
-    "cv.createTrackbar(\"EscalaY\", \"Transformaciones\", 100, 200, nothing)\n",
+    "cv.createTrackbar(\"Cx\", \"Transformaciones\", CW//2, CW, nothing)\n",
+    "cv.createTrackbar(\"Cy\", \"Transformaciones\", CH//2, CH, nothing)\n",
+    "cv.createTrackbar(\"EscalaX\", \"Transformaciones\", 100, 300, nothing)  # 1.00 = 100\n",
+    "cv.createTrackbar(\"EscalaY\", \"Transformaciones\", 100, 300, nothing)\n",
     "cv.createTrackbar(\"Uniforme\", \"Transformaciones\", 0, 1, nothing)\n",
     "\n",
-    "# Callback del ratón para cambiar centro de rotación\n",
-    "def mouse_callback(event, x, y, flags, param):\n",
-    "    global cx, cy, M_display\n",
-    "    \n",
-    "    if event == cv.EVENT_LBUTTONDOWN:\n",
-    "        # Convertir punto clicado a coordenadas originales\n",
-    "        M_inv = cv.invertAffineTransform(M_display)\n",
-    "        src_x = M_inv[0, 0] * x + M_inv[0, 1] * y + M_inv[0, 2]\n",
-    "        src_y = M_inv[1, 0] * x + M_inv[1, 1] * y + M_inv[1, 2]\n",
-    "        \n",
-    "        # Actualizar centro\n",
-    "        cx, cy = float(src_x), float(src_y)\n",
-    "        \n",
-    "        # Ajustar traslación para mantener imagen fija\n",
-    "        tx_new = int(round(x - cx))\n",
-    "        ty_new = int(round(y - cy))\n",
-    "        \n",
-    "        cv.setTrackbarPos(\"Tx\", \"Transformaciones\", \n",
-    "                         np.clip(tx_new + w//2, 0, w))\n",
-    "        cv.setTrackbarPos(\"Ty\", \"Transformaciones\", \n",
-    "                         np.clip(ty_new + h//2, 0, h))\n",
+    "print(\"El punto (cx/cy) es el centro de rotación y de escalado. ESC para salir.\")\n",
     "\n",
-    "cv.setMouseCallback(\"Transformaciones\", mouse_callback)\n",
+    "# Transformación afín:\n",
+    "#     T(x) = A·(x - c) + c + t\n",
+    "# donde:\n",
+    "#     A -> rotación y escala combinadas\n",
+    "#     c -> centro de rotación/escalado\n",
+    "#     t -> traslación global\n",
+    "#\n",
+    "# OpenCV aplica:  x' = A·x + b\n",
+    "# donde:\n",
+    "#     b = t + (I - A)·c\n",
     "\n",
-    "print(\"Usa los sliders para transformar la imagen.\")\n",
-    "print(\"Haz CLIC para cambiar el centro de rotación.\")\n",
-    "print(\"Pulsa ESC para salir.\")\n",
+    "\n",
+    "t_state = np.array([0.0, 0.0], dtype=np.float32)   # t_state: vector de traslación global (t_x, t_y) que desplaza toda la imagen\n",
+    "prev_c  = np.array([                               # centro anterior de rotación/escalado (c_x, c_y), usado para compensar movimiento\n",
+    "    cv.getTrackbarPos(\"Cx\", \"Transformaciones\"),\n",
+    "    cv.getTrackbarPos(\"Cy\", \"Transformaciones\")\n",
+    "], dtype=np.float32)\n",
+    "\n",
     "\n",
     "while True:\n",
-    "    # Leer valores de trackbars\n",
-    "    tx = cv.getTrackbarPos(\"Tx\", \"Transformaciones\") - w//2\n",
-    "    ty = cv.getTrackbarPos(\"Ty\", \"Transformaciones\") - h//2\n",
-    "    angle = cv.getTrackbarPos(\"Angulo\", \"Transformaciones\")\n",
-    "    sx = cv.getTrackbarPos(\"EscalaX\", \"Transformaciones\") / 100.0\n",
-    "    sy = cv.getTrackbarPos(\"EscalaY\", \"Transformaciones\") / 100.0\n",
-    "    uniforme = cv.getTrackbarPos(\"Uniforme\", \"Transformaciones\")\n",
-    "\n",
-    "    if uniforme:\n",
+    "    tx_ui = cv.getTrackbarPos(\"Tx\", \"Transformaciones\") - CW//2\n",
+    "    ty_ui = cv.getTrackbarPos(\"Ty\", \"Transformaciones\") - CH//2\n",
+    "    ang   = cv.getTrackbarPos(\"Angulo\", \"Transformaciones\")\n",
+    "    cx    = cv.getTrackbarPos(\"Cx\", \"Transformaciones\")\n",
+    "    cy    = cv.getTrackbarPos(\"Cy\", \"Transformaciones\")\n",
+    "    sx    = cv.getTrackbarPos(\"EscalaX\", \"Transformaciones\") / 100.0\n",
+    "    sy    = cv.getTrackbarPos(\"EscalaY\", \"Transformaciones\") / 100.0\n",
+    "    if cv.getTrackbarPos(\"Uniforme\", \"Transformaciones\") == 1:\n",
     "        sy = sx\n",
     "\n",
-    "    # Construir matriz compuesta\n",
-    "    rad = np.deg2rad(angle)\n",
+    "    # Rotación y escalado\n",
+    "    rad = np.deg2rad(ang)\n",
     "    c, s = np.cos(rad), np.sin(rad)\n",
+    "    R = np.array([[ c, -s],\n",
+    "                  [ s,  c]], dtype=np.float32)\n",
+    "    S = np.array([[sx, 0.0],\n",
+    "                  [0.0, sy]], dtype=np.float32)\n",
+    "    A = (R @ S).astype(np.float32)\n",
+    "    I = np.eye(2, dtype=np.float32)\n",
     "\n",
-    "    # 1. Trasladar centro al origen\n",
-    "    M_translate1 = np.float32([[1, 0, -cx],\n",
-    "                               [0, 1, -cy]])\n",
-    "    \n",
-    "    # 2. Escalar\n",
-    "    if uniforme:\n",
-    "        S = np.float32([[sx, 0, 0],\n",
-    "                        [0, sx, 0]])\n",
-    "    else:\n",
-    "        S = np.float32([[sx, 0, 0],\n",
-    "                        [0, sy, 0]])\n",
-    "    \n",
-    "    # 3. Rotar\n",
-    "    M_rotate = np.float32([[c, -s, 0],\n",
-    "                          [s,  c, 0]])\n",
-    "    \n",
-    "    # 4. Trasladar centro de vuelta\n",
-    "    M_translate2 = np.float32([[1, 0, cx],\n",
-    "                               [0, 1, cy]])\n",
-    "    \n",
-    "    # 5. Trasladar según trackbar\n",
-    "    T = np.float32([[1, 0, tx],\n",
-    "                    [0, 1, ty]])\n",
+    "    # Sincronizar t_state con trackbars SOLO si el usuario cambió Tx/Ty\n",
+    "    shown_tx = int(np.clip(round(t_state[0]) + CW//2, 0, CW))\n",
+    "    shown_ty = int(np.clip(round(t_state[1]) + CH//2, 0, CH))\n",
+    "    if (tx_ui + CW//2) != shown_tx or (ty_ui + CH//2) != shown_ty:\n",
+    "        t_state = np.array([tx_ui, ty_ui], dtype=np.float32)\n",
     "\n",
-    "    # Combinar todas las transformaciones\n",
-    "    M1 = np.vstack([M_translate1, [0, 0, 1]])\n",
-    "    M2 = np.vstack([S, [0, 0, 1]])\n",
-    "    M3 = np.vstack([M_rotate, [0, 0, 1]])\n",
-    "    M4 = np.vstack([M_translate2, [0, 0, 1]])\n",
-    "    M5 = np.vstack([T, [0, 0, 1]])\n",
-    "    \n",
-    "    M_total = M5 @ M4 @ M3 @ M2 @ M1\n",
-    "    M_final = M_total[:2]\n",
-    "    \n",
-    "    # Guardar matriz para el callback\n",
-    "    M_display = M_final.copy()\n",
+    "    # Compensar cambio de pivote manteniendo b\n",
+    "    c_now = np.array([cx, cy], dtype=np.float32) # nuevo centro de rotación/escalado\n",
+    "    if not np.allclose(c_now, prev_c):\n",
+    "        b_keep = t_state + (I - A) @ prev_c # valor supuesto con centro anterior\n",
+    "        t_state = b_keep - (I - A) @ c_now # valor con nuevo centro\n",
+    "        cv.setTrackbarPos(\"Tx\", \"Transformaciones\",\n",
+    "                          int(np.clip(round(t_state[0]) + CW//2, 0, CW)))\n",
+    "        cv.setTrackbarPos(\"Ty\", \"Transformaciones\",\n",
+    "                          int(np.clip(round(t_state[1]) + CH//2, 0, CH)))\n",
+    "        prev_c = c_now\n",
     "\n",
-    "    # Aplicar transformación\n",
-    "    img_final = cv.warpAffine(image, M_final, (w, h))\n",
+    "    b = (t_state + (I - A) @ c_now).astype(np.float32) # traslación final\n",
+    "    M = np.hstack([A, b.reshape(2,1)])  # 2x3\n",
+    "    out = cv.warpAffine(canvas0, M, (CW, CH))\n",
     "\n",
-    "    # Crear copia para visualización\n",
-    "    img_display = img_final.copy()\n",
-    "    \n",
-    "    # Calcular posición del centro en la imagen transformada\n",
-    "    px = int(round(M_final[0, 0]*cx + M_final[0, 1]*cy + M_final[0, 2]))\n",
-    "    py = int(round(M_final[1, 0]*cx + M_final[1, 1]*cy + M_final[1, 2]))\n",
-    "    \n",
-    "    # Dibujar centro de rotación (rojo)\n",
-    "    cv.circle(img_display, (px, py), 5, (0, 0, 255), -1)\n",
-    "    cv.putText(img_display, f\"({int(cx)},{int(cy)})\", (px + 10, py - 10),\n",
-    "               cv.FONT_HERSHEY_SIMPLEX, 0.6, (0, 0, 255), 2)\n",
-    "    \n",
-    "    # Dibujar punto de traslación (verde)\n",
-    "    tx_point = w//2 + tx\n",
-    "    ty_point = h//2 + ty\n",
-    "    if 0 <= tx_point < w and 0 <= ty_point < h:\n",
-    "        cv.circle(img_display, (tx_point, ty_point), 5, (0, 255, 0), -1)\n",
-    "        cv.putText(img_display, f\"T({tx_point},{ty_point})\", \n",
-    "                   (tx_point + 10, ty_point - 10),\n",
-    "                   cv.FONT_HERSHEY_SIMPLEX, 0.6, (0, 255, 0), 2)\n",
+    "    pc = (A @ c_now + b).astype(int) # pivote transformado p' = A c + b\n",
+    "    disp = out.copy()\n",
+    "    cv.circle(disp, (int(pc[0]), int(pc[1])), 6, (0,0,255), -1)\n",
+    "    cv.putText(disp, f\"C=({cx},{cy})\", (int(pc[0])+10, int(pc[1])-10),\n",
+    "               cv.FONT_HERSHEY_SIMPLEX, 0.6, (0,0,255), 2)\n",
     "\n",
-    "    cv.imshow(\"Transformaciones\", img_display)\n",
+    "    view = disp[oy:oy+h, ox:ox+w]\n",
+    "    cv.imshow(\"Transformaciones\", view)\n",
     "\n",
     "    if cv.waitKey(1) & 0xFF == 27:\n",
     "        break\n",
     "\n",
-    "cv.destroyAllWindows()"
+    "cv.destroyAllWindows()\n"
    ]
   }
  ],
