--- a/02/P02opcional.ipynb
+++ b/02/P02opcional.ipynb
@@ -18,16 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "52e30f96",
+   "execution_count": 12,
+   "id": "5486483a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trackbars o clic derecho para punto de giro, arrastra con izquierdo para mover imagen.\n",
-      "Pulsa ESC para salir.\n"
+      "Controles:\n",
+      "  • Clic izquierdo y arrastrar: trasladar imagen.\n",
+      "  • Clic derecho: fijar centro de rotación/escalado en el punto clicado.\n",
+      "  • Sliders: Tx/Ty/Cx/Cy/Ángulo/Escala. ESC para salir.\n"
      ]
     }
    ],
@@ -35,117 +37,145 @@
     "import cv2 as cv\n",
     "import numpy as np\n",
     "\n",
-    "image = cv.imread('images/cats.png')\n",
-    "if image is None:\n",
-    "    raise FileNotFoundError(\"No se encontró la imagen.\")\n",
-    "h, w = image.shape[:2]\n",
+    "img = cv.imread('images/cats.png')\n",
+    "if img is None:\n",
+    "    raise FileNotFoundError(\"No se encontró 'images/cats.png'\")\n",
+    "h, w = img.shape[:2]\n",
     "\n",
-    "cv.namedWindow(\"Transformaciones\")\n",
+    "CW, CH = w*2, h*2\n",
+    "ox, oy = (CW - w)//2, (CH - h)//2\n",
+    "canvas0 = np.zeros((CH, CW, 3), np.uint8)\n",
+    "canvas0[oy:oy+h, ox:ox+w] = img\n",
     "\n",
+    "cv.namedWindow(\"Transformaciones\", cv.WINDOW_AUTOSIZE)\n",
+    "def nothing(_): pass\n",
     "\n",
-    "cx, cy = w//2, h//2\n",
-    "mouse_selected = False\n",
-    "dragging_img = False\n",
-    "start_x = 0\n",
-    "start_y = 0\n",
-    "tx_mouse = 0\n",
-    "ty_mouse = 0\n",
-    "\n",
-    "def nothing(x):\n",
-    "    pass\n",
-    "\n",
-    "\n",
-    "cv.createTrackbar(\"Tx\", \"Transformaciones\", w//2, w, nothing)\n",
-    "cv.createTrackbar(\"Ty\", \"Transformaciones\", h//2, h, nothing)\n",
+    "cv.createTrackbar(\"Tx\", \"Transformaciones\", CW//2, CW, nothing)\n",
+    "cv.createTrackbar(\"Ty\", \"Transformaciones\", CH//2, CH, nothing)\n",
     "cv.createTrackbar(\"Angulo\", \"Transformaciones\", 0, 360, nothing)\n",
-    "cv.createTrackbar(\"Cx\", \"Transformaciones\", w//2, w, nothing)\n",
-    "cv.createTrackbar(\"Cy\", \"Transformaciones\", h//2, h, nothing)\n",
-    "cv.createTrackbar(\"EscalaX\", \"Transformaciones\", 100, 200, nothing)\n",
-    "cv.createTrackbar(\"EscalaY\", \"Transformaciones\", 100, 200, nothing)\n",
+    "cv.createTrackbar(\"Cx\", \"Transformaciones\", CW//2, CW, nothing)\n",
+    "cv.createTrackbar(\"Cy\", \"Transformaciones\", CH//2, CH, nothing)\n",
+    "cv.createTrackbar(\"EscalaX\", \"Transformaciones\", 100, 300, nothing)\n",
+    "cv.createTrackbar(\"EscalaY\", \"Transformaciones\", 100, 300, nothing)\n",
     "cv.createTrackbar(\"Uniforme\", \"Transformaciones\", 0, 1, nothing)\n",
     "\n",
+    "print(\"Controles:\")\n",
+    "print(\"  • Clic izquierdo y arrastrar: trasladar imagen.\")\n",
+    "print(\"  • Clic derecho: fijar centro de rotación/escalado en el punto clicado.\")\n",
+    "print(\"  • Sliders: Tx/Ty/Cx/Cy/Ángulo/Escala. ESC para salir.\")\n",
     "\n",
-    "def mouse(event, x, y, flags, param):\n",
-    "    global cx, cy, mouse_selected\n",
-    "    global dragging_img, start_x, start_y, tx_mouse, ty_mouse\n",
+    "t_state = np.array([0.0, 0.0], dtype=np.float32)\n",
+    "prev_c = np.array([\n",
+    "    cv.getTrackbarPos(\"Cx\", \"Transformaciones\"),\n",
+    "    cv.getTrackbarPos(\"Cy\", \"Transformaciones\")\n",
+    "], dtype=np.float32)\n",
+    "current_c = prev_c.copy()\n",
+    "\n",
+    "A_cur = np.eye(2, dtype=np.float32)\n",
+    "I_cur = np.eye(2, dtype=np.float32)\n",
+    "M_cur = np.hstack([A_cur, np.zeros((2,1), np.float32)])\n",
+    "\n",
+    "dragging = False\n",
+    "drag_start_canvas = np.array([0.0, 0.0], dtype=np.float32)\n",
+    "drag_base_t = np.array([0.0, 0.0], dtype=np.float32)\n",
+    "\n",
+    "def on_mouse(event, x, y, flags, param):\n",
+    "    global dragging, drag_start_canvas, drag_base_t\n",
+    "    global t_state, prev_c, current_c, A_cur, I_cur, M_cur\n",
+    "\n",
+    "    gx, gy = x + ox, y + oy\n",
     "\n",
     "    if event == cv.EVENT_LBUTTONDOWN:\n",
-    "        dragging_img = True\n",
-    "        start_x, start_y = x, y\n",
-    "    elif event == cv.EVENT_MOUSEMOVE and dragging_img:\n",
-    "        tx_mouse, ty_mouse = x - start_x, y - start_y\n",
+    "        dragging = True\n",
+    "        drag_start_canvas = np.array([gx, gy], dtype=np.float32)\n",
+    "        drag_base_t = t_state.copy()\n",
+    "\n",
+    "    elif event == cv.EVENT_MOUSEMOVE and dragging:\n",
+    "        delta = np.array([gx, gy], dtype=np.float32) - drag_start_canvas\n",
+    "        t_state = drag_base_t + delta\n",
+    "\n",
+    "        cv.setTrackbarPos(\"Tx\", \"Transformaciones\", int(np.clip(round(t_state[0]) + CW//2, 0, CW)))\n",
+    "        cv.setTrackbarPos(\"Ty\", \"Transformaciones\", int(np.clip(round(t_state[1]) + CH//2, 0, CH)))\n",
+    "\n",
     "    elif event == cv.EVENT_LBUTTONUP:\n",
-    "        dragging_img = False\n",
+    "        dragging = False\n",
     "\n",
-    "    if event == cv.EVENT_RBUTTONDOWN:\n",
-    "        cx, cy = x, y\n",
-    "        mouse_selected = True\n",
+    "    elif event == cv.EVENT_RBUTTONDOWN:\n",
+    "        M_inv = cv.invertAffineTransform(M_cur)\n",
+    "        cx_src = M_inv[0,0]*gx + M_inv[0,1]*gy + M_inv[0,2]\n",
+    "        cy_src = M_inv[1,0]*gx + M_inv[1,1]*gy + M_inv[1,2]\n",
+    "        c_new = np.array([cx_src, cy_src], dtype=np.float32)\n",
     "\n",
-    "cv.setMouseCallback(\"Transformaciones\", mouse)\n",
+    "        b_keep = t_state + (I_cur - A_cur) @ prev_c\n",
+    "        t_state = b_keep - (I_cur - A_cur) @ c_new\n",
     "\n",
-    "print(\"Trackbars o clic derecho para punto de giro, arrastra con izquierdo para mover imagen.\")\n",
-    "print(\"Pulsa ESC para salir.\")\n",
+    "        cv.setTrackbarPos(\"Cx\", \"Transformaciones\", int(np.clip(round(c_new[0]), 0, CW)))\n",
+    "        cv.setTrackbarPos(\"Cy\", \"Transformaciones\", int(np.clip(round(c_new[1]), 0, CH)))\n",
+    "        cv.setTrackbarPos(\"Tx\", \"Transformaciones\", int(np.clip(round(t_state[0]) + CW//2, 0, CW)))\n",
+    "        cv.setTrackbarPos(\"Ty\", \"Transformaciones\", int(np.clip(round(t_state[1]) + CH//2, 0, CH)))\n",
+    "\n",
+    "        prev_c = c_new.copy()\n",
+    "        current_c = c_new.copy()\n",
+    "\n",
+    "cv.setMouseCallback(\"Transformaciones\", on_mouse)\n",
     "\n",
     "while True:\n",
-    "    tx = cv.getTrackbarPos(\"Tx\", \"Transformaciones\") - w//2\n",
-    "    ty = cv.getTrackbarPos(\"Ty\", \"Transformaciones\") - h//2\n",
-    "    angle = cv.getTrackbarPos(\"Angulo\", \"Transformaciones\")\n",
+    "    tx_ui = cv.getTrackbarPos(\"Tx\", \"Transformaciones\") - CW//2\n",
+    "    ty_ui = cv.getTrackbarPos(\"Ty\", \"Transformaciones\") - CH//2\n",
+    "    ang = cv.getTrackbarPos(\"Angulo\", \"Transformaciones\")\n",
+    "    cx = cv.getTrackbarPos(\"Cx\", \"Transformaciones\")\n",
+    "    cy = cv.getTrackbarPos(\"Cy\", \"Transformaciones\")\n",
     "    sx = cv.getTrackbarPos(\"EscalaX\", \"Transformaciones\") / 100.0\n",
     "    sy = cv.getTrackbarPos(\"EscalaY\", \"Transformaciones\") / 100.0\n",
-    "    uniforme = cv.getTrackbarPos(\"Uniforme\", \"Transformaciones\")\n",
+    "    if cv.getTrackbarPos(\"Uniforme\", \"Transformaciones\") == 1:\n",
+    "        sy = sx\n",
     "\n",
-    "    if not mouse_selected:\n",
-    "        cx = cv.getTrackbarPos(\"Cx\", \"Transformaciones\")\n",
-    "        cy = cv.getTrackbarPos(\"Cy\", \"Transformaciones\")\n",
-    "    else:\n",
-    "        cv.setTrackbarPos(\"Cx\", \"Transformaciones\", cx)\n",
-    "        cv.setTrackbarPos(\"Cy\", \"Transformaciones\", cy)\n",
+    "    rad = np.deg2rad(ang)\n",
+    "    co, si = np.cos(rad), np.sin(rad)\n",
+    "    R = np.array([[ co, -si],\n",
+    "                  [ si,  co]], dtype=np.float32)\n",
+    "    S = np.array([[sx, 0.0],\n",
+    "                  [0.0, sy]], dtype=np.float32)\n",
+    "    A = (R @ S).astype(np.float32)\n",
+    "    I = np.eye(2, dtype=np.float32)\n",
     "\n",
-    "    # Traslación\n",
-    "    total_tx = tx + tx_mouse\n",
-    "    total_ty = ty + ty_mouse\n",
-    "    T = np.float32([[1, 0, total_tx],\n",
-    "                    [0, 1, total_ty]])\n",
-    "    img_T = cv.warpAffine(image, T, (w, h))\n",
+    "    if not dragging:\n",
+    "        shown_tx = int(np.clip(round(t_state[0]) + CW//2, 0, CW))\n",
+    "        shown_ty = int(np.clip(round(t_state[1]) + CH//2, 0, CH))\n",
+    "        if (tx_ui + CW//2) != shown_tx or (ty_ui + CH//2) != shown_ty:\n",
+    "            t_state = np.array([tx_ui, ty_ui], dtype=np.float32)\n",
     "\n",
-    "    # Rotación\n",
-    "    M_translate1 = np.float32([[1, 0, -cx],\n",
-    "                               [0, 1, -cy]])\n",
-    "    M_rotate = cv.getRotationMatrix2D((0, 0), angle, 1.0)\n",
-    "    M_translate2 = np.float32([[1, 0, cx],\n",
-    "                               [0, 1, cy]])\n",
-    "    M1 = np.vstack([M_translate1, [0,0,1]])\n",
-    "    M2 = np.vstack([M_rotate, [0,0,1]])\n",
-    "    M3 = np.vstack([M_translate2, [0,0,1]])\n",
-    "    M_rot = M3 @ M2 @ M1\n",
-    "    img_R = cv.warpAffine(img_T, M_rot[:2], (w,h))\n",
+    "    c_now = np.array([cx, cy], dtype=np.float32)\n",
+    "    if not dragging and not np.allclose(c_now, prev_c):\n",
+    "        b_keep = t_state + (I - A) @ prev_c\n",
+    "        t_state = b_keep - (I - A) @ c_now\n",
+    "        cv.setTrackbarPos(\"Tx\", \"Transformaciones\", int(np.clip(round(t_state[0]) + CW//2, 0, CW)))\n",
+    "        cv.setTrackbarPos(\"Ty\", \"Transformaciones\", int(np.clip(round(t_state[1]) + CH//2, 0, CH)))\n",
+    "        prev_c = c_now\n",
     "\n",
-    "    # Escalado\n",
-    "    if uniforme:\n",
-    "        s = sx\n",
-    "        S = np.float32([[s,0,0],\n",
-    "                        [0,s,0]])\n",
-    "    else:\n",
-    "        S = np.float32([[sx,0,0],\n",
-    "                        [0,sy,0]])\n",
-    "    img_final = cv.warpAffine(img_R, S, (w,h))\n",
+    "    current_c = c_now.copy()\n",
+    "    A_cur = A\n",
+    "    I_cur = I\n",
     "\n",
-    "    img_display = img_final.copy()\n",
-    "    \n",
-    "    cv.circle(img_display, (cx, cy), 5, (0,0,255), -1)\n",
-    "    cv.putText(img_display, f\"({cx},{cy})\", (cx+10, cy-10), cv.FONT_HERSHEY_SIMPLEX, 0.6, (0,0,255),2)\n",
+    "    b = (t_state + (I - A) @ c_now).astype(np.float32)\n",
+    "    M = np.hstack([A, b.reshape(2,1)])\n",
+    "    M_cur = M\n",
     "\n",
-    "    tx_point, ty_point = w//2 + total_tx, h//2 + total_ty\n",
-    "    cv.circle(img_display, (tx_point, ty_point), 5, (0,255,0), -1)\n",
-    "    cv.putText(img_display, f\"({tx_point},{ty_point})\", (tx_point+10, ty_point-10),\n",
-    "               cv.FONT_HERSHEY_SIMPLEX, 0.6, (0,255,0), 2)\n",
+    "    out = cv.warpAffine(canvas0, M, (CW, CH))\n",
     "\n",
-    "    cv.imshow(\"Transformaciones\", img_display)\n",
+    "    pc = (A @ c_now + b).astype(int)\n",
+    "    disp = out.copy()\n",
+    "    cv.circle(disp, (int(pc[0]), int(pc[1])), 6, (0,0,255), -1)\n",
+    "    cv.putText(disp, f\"C=({int(cx)},{int(cy)})\", (int(pc[0])+10, int(pc[1])-10),\n",
+    "               cv.FONT_HERSHEY_SIMPLEX, 0.6, (0,0,255), 2)\n",
+    "\n",
+    "    view = disp[oy:oy+h, ox:ox+w]\n",
+    "    cv.imshow(\"Transformaciones\", view)\n",
     "\n",
     "    if cv.waitKey(1) & 0xFF == 27:\n",
     "        break\n",
     "\n",
-    "cv.destroyAllWindows()\n"
+    "cv.destroyAllWindows()"
    ]
   },
   {
