P02 opcional video corrections

--- a/02/P02opcional.ipynb
+++ b/02/P02opcional.ipynb
@@ -193,16 +193,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "61bcc904",
+   "execution_count": 13,
+   "id": "ab5b0984",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Usa los sliders para transformar el video en tiempo real.\n",
-      "Pulsa ESC para salir.\n"
+      "El punto (cx/cy) es el centro de rotación y de escalado. ESC para salir.\n"
      ]
     }
    ],
@@ -220,84 +219,89 @@
     "\n",
     "h, w = frame.shape[:2]\n",
     "\n",
+    "CW, CH = w*2, h*2\n",
+    "ox, oy = (CW - w)//2, (CH - h)//2\n",
+    "\n",
     "cv.namedWindow(\"Transformaciones\", cv.WINDOW_AUTOSIZE)\n",
+    "def nothing(_): pass\n",
     "\n",
-    "def nothing(x):\n",
-    "    pass\n",
-    "\n",
-    "# Trackbars\n",
-    "cv.createTrackbar(\"Tx\", \"Transformaciones\", w // 2, w, nothing)\n",
-    "cv.createTrackbar(\"Ty\", \"Transformaciones\", h // 2, h, nothing)\n",
+    "cv.createTrackbar(\"Tx\", \"Transformaciones\", CW//2, CW, nothing)\n",
+    "cv.createTrackbar(\"Ty\", \"Transformaciones\", CH//2, CH, nothing)\n",
     "cv.createTrackbar(\"Angulo\", \"Transformaciones\", 0, 360, nothing)\n",
-    "cv.createTrackbar(\"Cx\", \"Transformaciones\", w // 2, w, nothing)\n",
-    "cv.createTrackbar(\"Cy\", \"Transformaciones\", h // 2, h, nothing)\n",
-    "cv.createTrackbar(\"EscalaX\", \"Transformaciones\", 100, 200, nothing)\n",
-    "cv.createTrackbar(\"EscalaY\", \"Transformaciones\", 100, 200, nothing)\n",
+    "cv.createTrackbar(\"Cx\", \"Transformaciones\", CW//2, CW, nothing)\n",
+    "cv.createTrackbar(\"Cy\", \"Transformaciones\", CH//2, CH, nothing)\n",
+    "cv.createTrackbar(\"EscalaX\", \"Transformaciones\", 100, 300, nothing)\n",
+    "cv.createTrackbar(\"EscalaY\", \"Transformaciones\", 100, 300, nothing)\n",
     "cv.createTrackbar(\"Uniforme\", \"Transformaciones\", 0, 1, nothing)\n",
     "\n",
-    "print(\"Usa los sliders para transformar el video en tiempo real.\")\n",
-    "print(\"Pulsa ESC para salir.\")\n",
+    "print(\"El punto (cx/cy) es el centro de rotación y de escalado. ESC para salir.\")\n",
+    "\n",
+    "t_state = np.array([0.0, 0.0], dtype=np.float32)\n",
+    "prev_c = np.array([\n",
+    "    cv.getTrackbarPos(\"Cx\", \"Transformaciones\"),\n",
+    "    cv.getTrackbarPos(\"Cy\", \"Transformaciones\")\n",
+    "], dtype=np.float32)\n",
     "\n",
     "while True:\n",
     "    ret, frame = cap.read()\n",
     "    if not ret:\n",
     "        break\n",
     "\n",
-    "    tx = cv.getTrackbarPos(\"Tx\", \"Transformaciones\") - w // 2\n",
-    "    ty = cv.getTrackbarPos(\"Ty\", \"Transformaciones\") - h // 2\n",
-    "    angle = cv.getTrackbarPos(\"Angulo\", \"Transformaciones\")\n",
+    "    canvas0 = np.zeros((CH, CW, 3), np.uint8)\n",
+    "    canvas0[oy:oy+h, ox:ox+w] = frame\n",
+    "\n",
+    "    tx_ui = cv.getTrackbarPos(\"Tx\", \"Transformaciones\") - CW//2\n",
+    "    ty_ui = cv.getTrackbarPos(\"Ty\", \"Transformaciones\") - CH//2\n",
+    "    ang = cv.getTrackbarPos(\"Angulo\", \"Transformaciones\")\n",
     "    cx = cv.getTrackbarPos(\"Cx\", \"Transformaciones\")\n",
     "    cy = cv.getTrackbarPos(\"Cy\", \"Transformaciones\")\n",
     "    sx = cv.getTrackbarPos(\"EscalaX\", \"Transformaciones\") / 100.0\n",
     "    sy = cv.getTrackbarPos(\"EscalaY\", \"Transformaciones\") / 100.0\n",
-    "    uniforme = cv.getTrackbarPos(\"Uniforme\", \"Transformaciones\")\n",
+    "    if cv.getTrackbarPos(\"Uniforme\", \"Transformaciones\") == 1:\n",
+    "        sy = sx\n",
     "\n",
-    "    # Traslación\n",
-    "    T = np.float32([[1, 0, tx],\n",
-    "                    [0, 1, ty]])\n",
-    "    img_T = cv.warpAffine(frame, T, (w, h))\n",
+    "    rad = np.deg2rad(ang)\n",
+    "    c, s = np.cos(rad), np.sin(rad)\n",
+    "    R = np.array([[ c, -s],\n",
+    "                  [ s,  c]], dtype=np.float32)\n",
+    "    S = np.array([[sx, 0.0],\n",
+    "                  [0.0, sy]], dtype=np.float32)\n",
+    "    A = (R @ S).astype(np.float32)\n",
+    "    I = np.eye(2, dtype=np.float32)\n",
     "\n",
-    "    # Rotación\n",
-    "    M_translate1 = np.float32([[1, 0, -cx],\n",
-    "                               [0, 1, -cy]])\n",
-    "    M_rotate = cv.getRotationMatrix2D((0, 0), angle, 1.0)\n",
-    "    M_translate2 = np.float32([[1, 0, cx],\n",
-    "                               [0, 1, cy]])\n",
+    "    shown_tx = int(np.clip(round(t_state[0]) + CW//2, 0, CW))\n",
+    "    shown_ty = int(np.clip(round(t_state[1]) + CH//2, 0, CH))\n",
+    "    if (tx_ui + CW//2) != shown_tx or (ty_ui + CH//2) != shown_ty:\n",
+    "        t_state = np.array([tx_ui, ty_ui], dtype=np.float32)\n",
     "\n",
-    "    M1 = np.vstack([M_translate1, [0, 0, 1]])\n",
-    "    M2 = np.vstack([M_rotate, [0, 0, 1]])\n",
-    "    M3 = np.vstack([M_translate2, [0, 0, 1]])\n",
-    "    M_rot = M3 @ M2 @ M1\n",
-    "    img_R = cv.warpAffine(img_T, M_rot[:2], (w, h))\n",
+    "    c_now = np.array([cx, cy], dtype=np.float32)\n",
+    "    if not np.allclose(c_now, prev_c):\n",
+    "        b_keep = t_state + (I - A) @ prev_c\n",
+    "        t_state = b_keep - (I - A) @ c_now\n",
+    "        cv.setTrackbarPos(\"Tx\", \"Transformaciones\",\n",
+    "                          int(np.clip(round(t_state[0]) + CW//2, 0, CW)))\n",
+    "        cv.setTrackbarPos(\"Ty\", \"Transformaciones\",\n",
+    "                          int(np.clip(round(t_state[1]) + CH//2, 0, CH)))\n",
+    "        prev_c = c_now\n",
     "\n",
-    "    # Escalado\n",
-    "    if uniforme:\n",
-    "        s = sx\n",
-    "        S = np.float32([[s, 0, 0],\n",
-    "                        [0, s, 0]])\n",
-    "    else:\n",
-    "        S = np.float32([[sx, 0, 0],\n",
-    "                        [0, sy, 0]])\n",
-    "    img_final = cv.warpAffine(img_R, S, (w, h))\n",
+    "    b = (t_state + (I - A) @ c_now).astype(np.float32)\n",
+    "    M = np.hstack([A, b.reshape(2,1)])\n",
+    "    out = cv.warpAffine(canvas0, M, (CW, CH))\n",
     "\n",
-    "    img_display = img_final.copy()\n",
+    "    pc = (A @ c_now + b).astype(int)\n",
+    "    disp = out.copy()\n",
+    "    cv.circle(disp, (int(pc[0]), int(pc[1])), 6, (0,0,255), -1)\n",
+    "    cv.putText(disp, f\"C=({cx},{cy})\", (int(pc[0])+10, int(pc[1])-10),\n",
+    "               cv.FONT_HERSHEY_SIMPLEX, 0.6, (0,0,255), 2)\n",
     "\n",
-    "    cv.circle(img_display, (cx, cy), 5, (0, 0, 255), -1)\n",
-    "    cv.putText(img_display, f\"({cx},{cy})\", (cx + 10, cy - 10),\n",
-    "               cv.FONT_HERSHEY_SIMPLEX, 0.6, (0, 0, 255), 2)\n",
-    "\n",
-    "    tx_point, ty_point = w // 2 + tx, h // 2 + ty\n",
-    "    cv.circle(img_display, (tx_point, ty_point), 5, (0, 255, 0), -1)\n",
-    "    cv.putText(img_display, f\"({tx_point},{ty_point})\", (tx_point + 10, ty_point - 10),\n",
-    "               cv.FONT_HERSHEY_SIMPLEX, 0.6, (0, 255, 0), 2)\n",
-    "\n",
-    "    cv.imshow(\"Transformaciones\", img_display)\n",
+    "    view = disp[oy:oy+h, ox:ox+w]\n",
+    "    cv.imshow(\"Transformaciones\", view)\n",
     "\n",
     "    if cv.waitKey(1) & 0xFF == 27:\n",
     "        break\n",
     "\n",
     "cap.release()\n",
-    "cv.destroyAllWindows()\n"
+    "cv.destroyAllWindows()"
    ]
   },
   {
